refactor: changed the way the card is centered
To center the card we used to use the margin:auto property, however this may not be very obvious to the naked eye. Now this property is removed and in the parent container the card is centered with align-items and justify-content

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,8 @@ $card-border-radius: 1em;
 main {
     background-color: $light-gray;
     display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 100vh;
     position: relative;
     padding: 3em 0;
@@ -28,7 +30,6 @@ main {
         transition-timing-function: ease-in-out;
         background-color: $white;
         border-radius: 1em;
-        margin: auto;
         display: inline-flex;
         flex-direction: column;
         justify-content: center;
