--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,12 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 100vh;
   position: relative;
   padding: 3em 0;
@@ -27,7 +33,6 @@ main .card {
           transition-timing-function: ease-in-out;
   background-color: white;
   border-radius: 1em;
-  margin: auto;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
